app/assets/stylesheets/custom.css
.top-nav {
  justify-content: space-between;
  align-items: center;
  padding: 10px;
}

small a {
  font-size: 1em;
  padding-right: 0.2rem;
}

.signin,
.sign-up {
  box-shadow:
  0 0.06875rem 0.0875rem rgb(4, 9, 20 / 3%),
  0 0.0375rem 0.10625rem rgb(4, 9, 20 / 3%),
  0 0.05rem 0.03125rem rgb(4, 9, 20 / 5%),
  0 0.025rem 0.0875rem rgb(4, 9, 20 / 3%);
  padding: 15px;
  border-radius: 8px;
  width: 80%;
}

.message-body {
  background-color: #fff;
  padding-right: 10px;
  height: 100%;
}

small {
  color: #111827;
}

.cont-room {
  position: relative;
  padding: 0;
}

body {
  margin: 0;
  overflow-x: hidden;
  background-color: #f4f3f6;
}

.row {
  width: 77%;
  float: right;
  box-shadow:
    0 0.46875rem 2.1875rem rgb(4 9 20 / 3%),
    0 0.9375rem 1.40625rem rgb(4 9 20 / 3%),
    0 0.25rem 0.53125rem rgb(4 9 20 / 5%),
    0 0.125rem 0.1875rem rgb(4 9 20 / 3%);
  background-color: #fff;
}

.panel {
  justify-content: center;
}

a {
  text-decoration: none;
  font-size: 1.1rem;
}.top-nav {
  justify-content: space-between;
  align-items: center;
  padding: 10px;
}

small a {
  font-size: 1em;
  padding-right: 0.2rem;
}

.signin,
.sign-up {
  box-shadow:
  0 0.06875rem 0.0875rem rgb(4, 9, 20 / 3%),
  0 0.0375rem 0.10625rem rgb(4, 9, 20 / 3%),
  0 0.05rem 0.03125rem rgb(4, 9, 20 / 5%),
  0 0.025rem 0.0875rem rgb(4, 9, 20 / 3%);
  padding: 15px;
  border-radius: 8px;
  width: 80%;
}

.current-user {
  background-color: #007bff;
  padding: 5px;
  border-radius: 18px;
}

.sign-form {
  justify-content: center;
}

.inner-sign {
  box-shadow: 0 0.46875rem 2.1875rem rgb(4 9 20 / 3%), 0 0.9375rem 1.40625rem rgb(4 9 20 / 3%), 0 0.25rem 0.53125rem rgb(4 9 20 / 5%), 0 0.125rem 0.1875rem rgb(4 9 20 / 3%);
  border-width: 0;
  transition: all .2s;
  padding: 15px 1.2rem;
  border-radius: 0.25rem;
}

.messages {
  margin-left: 5px;
  overflow-y: scroll;
  height: 65vh;
}

.message-box {
  word-wrap: break-word;
  max-width: 40%;
  padding: 5px;
  border-radius: 10px;
  margin-bottom: 10px;
  background-color: #d1d5db;
  padding: 10px;
  color: #111827;
}

.sidebar {
  width: 23%;
  text-align: left;
  z-index: 1005;
  position: absolute;
  top: 0;
  bottom: 0;
  padding: 32px 0 0;
  background-color: #fff !important;
  box-shadow:
    0 0.46875rem 2.1875rem rgb(4 9 20 / 3%),
    0 0.9375rem 1.40625rem rgb(4 9 20 / 3%),
    0 0.25rem 0.53125rem rgb(4 9 20 / 5%),
    0 0.125rem 0.1875rem rgb(4 9 20 / 3%);
}

.message-box h6 {
  background-color: #f4f6f8;
  padding: 5px;
  border-radius: 3px;
  color: #212b36;
}

.current-user-cont {
  display: flex;
  justify-content: flex-end;
  margin: 5px 0;
}

.another-user-cont {
  display: flex;
  justify-content: flex-start;
  margin: 5px 0;
}

.form-control,
.btn-primary {
  border-radius: 0;
}

.another-user {
  background-color: #6b7280;
  padding: 5px;
  border-radius: 18px;
}

.owner {
  justify-content: flex-end;
  margin-right: 5%;
}

.name,
.name a {
  white-space: nowrap;
  top: -20px;
  font-size: 12px;
  color: rgba(33,43,53,.65);
  padding-left: 5px;
  margin-bottom: 2px;
  letter-spacing: -.18px;
}

